# BlockCure

./: README.md  pyproject.toml
SRC/: .env.example  Dockerfile  compose.yaml  config.yaml
SRC/BACKEND/: Dockerfile
SRC/BACKEND/SERVICES/: server.py
SRC/BACKEND/UTILS/: agent.py  database.py  deidentifier_api.py  log.py  p2p.py
SRC/DB/: Dockerfile  setup_db.py  setup_vectorstore.py
SRC/FRONTEND/: Dockerfile
SRC/FRONTEND/src/Hooks/: AuthProvider.tsx
SRC/FRONTEND/src/components/Browse/: Browser.css  Browser.tsx
SRC/FRONTEND/src/components/Error/: ErrorHandler.tsx  error.css
SRC/FRONTEND/src/components/HomePage/: Home.tsx  home.css
SRC/FRONTEND/src/components/StartForm/: Login.tsx  login.css
SRC/FRONTEND/src/components/UploadRecords/: Upload.tsx
