[project]
name = "blockcure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "alembic==1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "astunparse==1.6.3",
    "asyncer==0.0.8",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "blis==1.3.3",
    "build==1.3.0",
    "cachetools==6.2.4",
    "catalogue==2.0.10",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.0",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colorlog==6.10.1",
    "confection==0.1.5",
    "cymem==2.0.13",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dspy==3.0.4",
    "durationpy==0.10",
    "en-core-web-sm",
    "fastapi==0.128.0",
    "fastuuid==0.14.0",
    "filelock==3.20.2",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "gast==0.7.0",
    "gepa==0.0.17",
    "gevent==25.9.1",
    "google-auth==2.45.0",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "grpcio>=1.75.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "json-repair==0.55.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "keras==3.13.0",
    "kubernetes==34.1.0",
    "libclang==18.1.1",
    "litellm<1.75.0",
    "magicattr==0.1.6",
    "mako==1.3.10",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "murmurhash==1.0.15",
    "namex==0.1.0",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==2.14.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "optuna==4.6.0",
    "orjson==3.11.5",
    "overrides==7.7.0",
    "packaging==25.0",
    "pillow==12.1.0",
    "pip==25.3",
    "posthog==5.4.0",
    "preshed==3.0.12",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "psutil==7.2.1",
    "psycopg2==2.9.11",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.5.0",
    "sniffio==1.3.1",
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.45",
    "srsly==2.5.2",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.3.0",
    "thinc==8.3.10",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1+cu126",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "typer==0.21.0",
    "typer-slim==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.3.0",
    "uvicorn==0.40.0",
    "wasabi==1.1.3",
    "watchfiles==1.1.1",
    "weasel==0.4.3",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "werkzeug==3.1.4",
    "wheel==0.45.1",
    "wrapt==2.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zope-event==6.1",
    "zope-interface==8.1.1",
]

[dependency-groups]
dev = [
    "blockcure",
]

[tool.uv.sources]
blockcure = { workspace = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
